5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1723_2504.log
== TEST (2019-05-13 21:11:04) 
-- CODE:
qic=int(input("quantidade inicial de copias de virus: "))
qil=int(input("Quantidade inicial de leucócitos: "))
pv=int(input("Percentual do virus: "))
pl=int(input("percentual dos leucocitos: "))
percv=pv/100
percl=pl/100
dia=0
while(qil>2*qic):
	qic=qic+(quic*percv)
	qil=qil+(qil*percl)
	dia=dia+1
print(dia)
	
	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:12:06) 
-- CODE:
qic=int(input("quantidade inicial de copias de virus: "))
qil=int(input("quantidade inicial de leucócitos: "))
pv=int(input("percentual do virus: "))
pl=int(input("percentual dos leucocitos: "))
percv=pv/100
percl=pl/100
dia=0
while(qil>2*qic):
	qic=qic+(quic*percv)
	qil=qil+(qil*percl)
	dia=dia+1
print(dia)
	
	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:12:56) 
-- CODE:
qic=int(input("quantidade inicial de copias de virus: "))
qil=int(input("quantidade inicial de leucocitos: "))
pv=int(input("percentual do virus: "))
pl=int(input("percentual dos leucocitos: "))
percv=pv/100
percl=pl/100
dia=0
while(qil>2*qic):
	qic=qic+(quic*percv)
	qil=qil+(qil*percl)
	dia=dia+1
print(dia)
	
	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:13:39) 
-- CODE:
qic=int(input("quantidade inicial de copias de virus: "))
qil=int(input("quantidade inicial de leucocitos: "))
pv=int(input("percentual do virus: "))
pl=int(input("percentual dos leucocitos: "))
percv=pv/100
percl=pl/100
dia=0
while(qil>2*qic):
	qic=qic+(quic*percv)
	qil=qil+(qil*percl)
	dia=dia+1
print(dia)
	
	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 21:13:46) 
-- CODE:
qic=int(input("quantidade inicial de copias de virus: "))
qil=int(input("quantidade inicial de leucocitos: "))
pv=int(input("percentual do virus: "))
pl=int(input("percentual dos leucocitos: "))
percv=pv/100
percl=pl/100
dia=0
while(qil>2*qic):
	qic=qic+(quic*percv)
	qil=qil+(qil*percl)
	dia=dia+1
print(dia)
	
	
-- EXECUTION TIME:
0.132679
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
0
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
0
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:23:14) 
-- CODE:
qic=int(input("quantidade inicial de copias de virus: "))
qil=int(input("quantidade inicial de leucocitos: "))
pv=int(input("percentual do virus: "))
pl=int(input("percentual dos leucocitos: "))
percv=pv/100
percl=pl/100
dia=0
while(qil>2*qic):
	qic=qic+(quic*percv)
	qil=qil+(qil*percl)
	dia=dia+1
print(dia)
	
	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:44:44) 
-- CODE:
qic=int(input("quantidade inicial de copias de virus: "))
qil=int(input("quantidade inicial de leucocitos: "))
pv=int(input("percentual do virus: "))/100
pl=int(input("percentual dos leucocitos: "))100
percv=pv/100
percl=pl/100
dia=0
while(qil>2*qic):
	qic=qic+(quic*percv)
	qil=qil+(qil*percl)
	dia=dia+1
print(dia)
	
	
-- ERROR:
File "XXXX", line 4
    pl=int(input())100
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:50:29) 
-- CODE:
v = int(input("quantidade de virus: "))
l = int(input("quantidade de leucocitos: "))
pv = int(input("percentual do virus: "))/100
pl = int(input("percentual dos leucocitos: "))100
s=0
d=o
 while(l<(2*v)):
		v = v+ pv*v
		l = l+ pl *
		d = d+1
print(d)
	
-- ERROR:
File "XXXX", line 4
    pl = int(input())100
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:51:03) 
-- CODE:
v = int(input("quantidade de virus: "))
l = int(input("quantidade de leucocitos: "))
pv = int(input("percentual do virus: "))/100
pl = int(input("percentual dos leucocitos: "))100
s=0
d=0
 while(l<(2*v)):
		v = v+ pv*v
		l = l+ pl *
		d = d+1
print(d)
	
-- ERROR:
File "XXXX", line 4
    pl = int(input())100
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:52:18) 
-- CODE:
v = int(input("quantidade de virus: "))
l = int(input("quantidade de leucocitos: "))
pv = int(input("percentual do virus: "))/100
pl = int(input("percentual dos leucocitos: "))100
s=o
d=o
 while(l<(2*v)):
		v = v+ pv*v
		l = l+ pl *
		d = d+1
print(d)
	
-- ERROR:
File "XXXX", line 4
    pl = int(input())100
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:55:31) 
-- CODE:
v = int(input("quantidade de virus: "))
l = int(input("quantidade de leucocitos: "))
pv = int(input("percentual do virus: "))/100
pl = int(input("percentual dos leucocitos: "))100
s=0
d=0
 while(l<(2*v)):
		v = v+ pv*v
		l = l+ pl *
		d = d+1
print(d)
	
-- ERROR:
File "XXXX", line 4
    pl = int(input())100
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:57:00) 
-- CODE:
v = int(input("quantidade de virus: "))
l = int(input("quantidade de leucocitos: "))
pv = int(input("percentual do virus: "))/100
pl = int(input("percentual dos leucocitos: "))100
s=0
d=0
 while(l<(2*v)):
		v = v+ pv*v
		l = l+ pl*l
		d = d+1
print(d)
	
-- ERROR:
File "XXXX", line 4
    pl = int(input())100
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:58:58) 
-- CODE:
v = int(input("quantidade de virus: "))
l = int(input("quantidade de leucocitos: "))
pv = int(input("percentual do virus: "))/100
pl = int(input("percentual dos leucocitos: "))/100
s=0
d=0
 while(l<(2*v)):
		v = v+ pv*v
		l = l+ pl*l
		d = d+1
print(d)
	
-- ERROR:
File "XXXX", line 7
    while(l<(2*v)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:00:14) 
-- CODE:
v = int(input("quantidade de virus: "))
l = int(input("quantidade de leucocitos: "))
pv = int(input("percentual do virus: "))/100
pl = int(input("percentual dos leucocitos: "))/100
s=0
d=0
while(l<(2*v)):
	v = v+ pv*v
	l = l+ pl*l
	d = d+1
print(d)
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:00:52) 
-- CODE:
v = int(input("quantidade de virus: "))
l = int(input("quantidade de leucocitos: "))
pv = int(input("percentual do virus: "))/100
pl = int(input("percentual dos leucocitos: "))/100
s=0
d=0
while(l<(2*v)):
	v = v+ pv*v
	l = l+ pl*l
	d = d+1
print(d)
	
-- EXECUTION TIME:
0.142648
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:48:50) 
-- CODE:
v=int(input("quantidade inicial de copias de virus: "))
l=int(input("quantidade de leucocitos: "))
pv=int(input("percetual de virus: "))/100
pl=int(input("percentual de leucocitos: "))/100

t=0
while(2*l>v):
	v=v+(v*pv)
	l=l+(l*pl)
	t=t+1
print(t)
	
	
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:51:12) 
-- CODE:
v=int(input("quantidade inicial de copias de virus: "))
l=int(input("quantidade de leucocitos: "))
pv=int(input("percetual de virus: "))/100
pl=int(input("percentual de leucocitos: "))/100

t=0
while(l>2*v):
	v=v+(v*pv)
	l=l+(l*pl)
	t=t+1
print(t)
	
	
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:52:34) 
-- CODE:
v=int(input("quantidade inicial de copias de virus: "))
l=int(input("quantidade de leucocitos: "))
pv=int(input("percetual de virus: "))/100
pl=int(input("percentual de leucocitos: "))/100

t=0
while(l<2*v):
	v=v+(v*pv)
	l=l+(l*pl)
	t=t+1
print(t)
	
	
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:53:41) 
-- CODE:
v=int(input("quantidade inicial de copias de virus: "))
l=int(input("quantidade de leucocitos: "))
pv=int(input("percetual de virus: "))/100
pl=int(input("percentual de leucocitos: "))/100

t=0
while(l<2*v):
	v=v+(v*pv)
	l=l+(l*pl)
	t=t+1
print(t)
	
	
	
-- EXECUTION TIME:
0.143699
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
